--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,4 +19,5 @@ jobs:
             tar -xz -C /tmp -f /tmp/docker-$VER.tgz
             mv /tmp/docker/* /usr/bin
 
-       - run: docker build -t lynckia/licode:test
+       - run: |
+         docker build -t lynckia/licode:test
