Use a different docker image

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2.0
 jobs:
   build:
     docker:
-      - image: circleci/node:6
+      - image: buildpack-deps:trusty
     working_directory: /tmp/licode
     steps:
       - checkout
