Use an image with curl

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,12 +3,23 @@ version: 2.0
 jobs:
   build:
     docker:
-      - image: buildpack-deps:trusty
+      - image: buildpack-deps:trusty-curl
     working_directory: /tmp/licode
     steps:
       - checkout
 
       - setup_remote_docker
+
+      # use a primary image that already has Docker (recommended)
+      # or install it during a build like we do here
+      - run:
+          name: Install Docker client
+          command: |
+            set -x
+            VER="17.03.0-ce"
+            curl -L -o /tmp/docker-$VER.tgz https://get.docker.com/builds/Linux/x86_64/docker-$VER.tgz
+            tar -xz -C /tmp -f /tmp/docker-$VER.tgz
+            mv /tmp/docker/* /usr/bin
 
       # build and push Docker image
       - run: |
