Start building docker image

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,4 +23,5 @@ jobs:
 
       # build and push Docker image
       - run: |
-          docker build -t lynckia/licode:test
+          ls
+          docker build -t lynckia/licode:test .
