More tests for global vars

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,8 +4,6 @@ jobs:
   build:
     docker:
       - image: buildpack-deps:trusty-curl
-        environment:
-          SHORT_GIT_HASH: "`echo $CIRCLE_SHA1 | cut -c -8`"
 
     working_directory: /tmp/licode
 
@@ -13,6 +11,12 @@ jobs:
       - checkout
 
       - setup_remote_docker
+
+      - run:
+          name: Global variables with commands
+          command: |
+            export SHORT_GIT_HASH = $(echo $CIRCLE_SHA1 | cut -c -8)
+            echo ${SHORT_GIT_HASH}
 
       - run:
           name: Install Docker client
