--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
       - run:
           name: Global variables with commands
           command: |
-            export SHORT_GIT_HASH $(echo $CIRCLE_SHA1 | cut -c -8)
+            export SHORT_GIT_HASH="$(echo asdrwqrewqewq | cut -c -8)"
             echo HASH: ${SHORT_GIT_HASH}
 
       - run:
