--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,7 +30,8 @@ jobs:
           name: Build docker image
           command: |
             echo Building lynckia/licode:develop
-            docker build --cache-from lynckia/licode:develop -t lynckia/licode:develop .
+            SHORT_GIT_HASH="$(echo ${CIRCLE_SHA1} | cut -c -7)"
+            docker build --label COMMIT=${SHORT_GIT_HASH} --cache-from lynckia/licode:develop -t lynckia/licode:develop .
 
       - run:
           name: Lint Erizo
@@ -57,9 +58,35 @@ jobs:
           name: Push Licode Docker image
           command: |
             if [ "${CIRCLE_BRANCH}" == "master" ]; then
-              SHORT_GIT_HASH="$(echo ${CIRCLE_SHA1} | cut -c -8)"
+              SHORT_GIT_HASH="$(echo ${CIRCLE_SHA1} | cut -c -7)"
               docker login -u ${DOCKER_USER} -p ${DOCKER_PASS}
               echo Tagging to lynckia/licode:${SHORT_GIT_HASH}
               docker tag lynckia/licode:develop lynckia/licode:${SHORT_GIT_HASH}
-              docker push lynckia/licode:develop
+              docker push lynckia/licode:develop lynckia/licode:${SHORT_GIT_HASH}
             fi
+
+prerelease:
+  docker:
+    - image: buildpack-deps:trusty-curl
+
+  working_directory: /tmp/licode
+
+  steps:
+    - checkout
+
+    - setup_remote_docker
+
+    - run: ./utils/release.sh -p -v ${RELEASE_VERSION}
+
+release:
+  docker:
+    - image: buildpack-deps:trusty-curl
+
+  working_directory: /tmp/licode
+
+  steps:
+    - checkout
+
+    - setup_remote_docker
+
+    - run: ./utils/release.sh -r -v ${RELEASE_VERSION}
