--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -77,7 +77,25 @@ jobs:
 
       - setup_remote_docker
 
-      - run: ./utils/release.sh -p -v ${RELEASE_VERSION}
+      - run:
+          name: Install Docker client
+          command: |
+            set -x
+            VER="17.03.0-ce"
+            curl -L -o /tmp/docker-$VER.tgz https://get.docker.com/builds/Linux/x86_64/docker-$VER.tgz
+            tar -xz -C /tmp -f /tmp/docker-$VER.tgz
+            mv /tmp/docker/* /usr/bin
+
+      - run:
+          name: Install deps
+          command: |
+            sudo apt-get update
+            sudo apt-get install -y git jq
+
+      - run:
+          name: Create Prerelease
+          command: |
+            ./utils/release.sh -p -v ${RELEASE_VERSION}
 
   release:
     docker:
@@ -90,4 +108,22 @@ jobs:
 
       - setup_remote_docker
 
-      - run: ./utils/release.sh -r -v ${RELEASE_VERSION}
+      - run:
+          name: Install Docker client
+          command: |
+            set -x
+            VER="17.03.0-ce"
+            curl -L -o /tmp/docker-$VER.tgz https://get.docker.com/builds/Linux/x86_64/docker-$VER.tgz
+            tar -xz -C /tmp -f /tmp/docker-$VER.tgz
+            mv /tmp/docker/* /usr/bin
+
+      - run:
+          name: Install deps
+          command: |
+            sudo apt-get update
+            sudo apt-get install -y git jq
+
+      - run:
+          name: Create release
+          command: |
+            ./utils/release.sh -r -v ${RELEASE_VERSION}
