--- a/extras/basic_example/package.json
+++ b/extras/basic_example/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "dependencies": {
     "body-parser": "1.17.2",
+    "config": "1.26.1",
     "error": "7.0.2",
     "errorhandler": "1.5.0",
     "express": "4.15.3",
