Add sending publishers and subscribers count from erizoJS to graphite.

--- a/erizo_controller/log4js_configuration.json
+++ b/erizo_controller/log4js_configuration.json
@@ -18,6 +18,7 @@
     "ErizoAgentReporter": "ERROR",
     "EcCloudHandler": "INFO",
     "RoomController": "INFO",
-    "RPCPublic":"ERROR"
+    "RPCPublic":"ERROR",
+    "GRAPHITE": "ERROR"
   }
 }
