--- a/extras/basic_example/package.json
+++ b/extras/basic_example/package.json
@@ -7,6 +7,7 @@
     "error": "7.0.2",
     "errorhandler": "1.5.0",
     "express": "4.15.3",
-    "morgan": "1.8.2"
+    "morgan": "1.8.2",
+    "string-hash": "1.1.3"
   }
 }
