--- a/nuve/nuveAPI/package.json
+++ b/nuve/nuveAPI/package.json
@@ -12,6 +12,7 @@
     "config": "1.26.1",
     "ejs": "2.5.6",
     "express": "4.15.3",
+    "lodash": "4.17.4",
     "log4js": "1.0.1",
     "mongojs": "2.4.0",
     "node-getopt": "0.2.3"
