Keep rooms for specific service in separate collection.

--- a/nuve/nuveAPI/log4js_configuration.json
+++ b/nuve/nuveAPI/log4js_configuration.json
@@ -18,6 +18,7 @@
     "RoomRegistry": "ERROR",
     "ServiceRegistry": "ERROR",
     "TokenRegistry": "ERROR",
+    "ServiceRoomRegistry": "ERROR",
     "RoomResource": "ERROR",
     "RoomsResource": "ERROR",
     "ServiceResource": "ERROR",
