--- a/erizo_controller/erizoJS/package.json
+++ b/erizo_controller/erizoJS/package.json
@@ -6,6 +6,7 @@
     "config": "1.26.1",
     "graphite-tcp": "1.0.4",
     "log4js": "1.0.1",
+    "log4js-logstash": "0.2.3",
     "mongojs": "2.4.1",
     "node-getopt": "0.2.3"
   },
