--- a/erizo_controller/erizoAgent/log4cxx.properties
+++ b/erizo_controller/erizoAgent/log4cxx.properties
@@ -1,5 +1,5 @@
 # Set root logger level to DEBUG and its appenders to A1 and TCP.
-log4j.rootLogger=INFO, A1, TCP
+log4j.rootLogger=DEBUG, A1, TCP
 
 # A1 is set to be a ConsoleAppender.
 log4j.appender.A1=org.apache.log4j.ConsoleAppender
@@ -9,7 +9,7 @@ log4j.appender.A1.layout=org.apache.log4j.PatternLayout
 # Print the date in ISO 8601 format
 log4j.appender.A1.layout.ConversionPattern=%d  - %p [%t] %c - %m%n
 
-log4j.appender.TCP=org.apache.log4j.net.SocketAppender
+log4j.appender.TCP=org.apache.log4j.net.XMLSocketAppender
 log4j.appender.TCP.Port=5960
 log4j.appender.TCP.RemoteHost=elk.service.consul
 log4j.appender.TCP.ReconnectionDelay=10000
