revert rootLogger level to INFO

--- a/erizo_controller/erizoAgent/log4cxx.properties
+++ b/erizo_controller/erizoAgent/log4cxx.properties
@@ -1,5 +1,5 @@
 # Set root logger level to DEBUG and its appenders to A1 and TCP.
-log4j.rootLogger=DEBUG, A1, TCP
+log4j.rootLogger=INFO, A1, TCP
 
 # A1 is set to be a ConsoleAppender.
 log4j.appender.A1=org.apache.log4j.ConsoleAppender
