--- a/erizo_controller/erizoAgent/package.json
+++ b/erizo_controller/erizoAgent/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "amqp": "0.2.6",
     "config": "1.26.1",
+    "graphite-tcp": "1.0.4",
     "log4js": "1.0.1",
     "log4js-logstash": "0.2.3",
     "mongojs": "2.4.1",
