--- a/.eslintrc
+++ b/.eslintrc
@@ -13,6 +13,12 @@
             {
                 "functions": false
             }
+        ],
+        "no-unused-vars": [
+            "error",
+            {
+                "args": "none"
+            }
         ]
     }
 }
