--- a/erizo_controller/erizoAgent/log4cxx.properties
+++ b/erizo_controller/erizoAgent/log4cxx.properties
@@ -12,6 +12,7 @@ log4j.appender.A1.layout.ConversionPattern=%d  - %p [%t] %c - %m%n
 log4j.logger.DtlsTransport=DEBUG
 log4j.logger.LibNiceConnection=DEBUG
 log4j.logger.NicerConnection=DEBUG
+log4j.logger.MediaStream=DEBUG
 log4j.logger.OneToManyProcessor=WARN
 log4j.logger.Resender=WARN
 log4j.logger.SdpInfo=WARN
