Added files to log4cpp properties

--- a/erizo_controller/erizoAgent/log4cxx.properties
+++ b/erizo_controller/erizoAgent/log4cxx.properties
@@ -9,6 +9,9 @@ log4j.appender.A1.layout=org.apache.log4j.PatternLayout
 # Print the date in ISO 8601 format
 log4j.appender.A1.layout.ConversionPattern=%d  - %p [%t] %c - %m%n
 
+log4j.logger.ErizoAPI.WebRtcConnection=DEBUG
+log4j.logger.ErizoAPI.MediaStream=DEBUG
+
 log4j.logger.DtlsTransport=DEBUG
 log4j.logger.LibNiceConnection=DEBUG
 log4j.logger.NicerConnection=DEBUG
