Runs on Ubuntu 16.04

--- a/erizo/src/CMakeLists.txt
+++ b/erizo/src/CMakeLists.txt
@@ -57,7 +57,7 @@ add_custom_target(lint
 #global variable
 set(THIRD_PARTY_INCLUDE "${CMAKE_CURRENT_SOURCE_DIR}/../../build/libdeps/build/include/")
 set(THIRD_PARTY_LIB "${CMAKE_CURRENT_SOURCE_DIR}/../../build/libdeps/build/lib/")
-
+include_directories(${THIRD_PARTY_INCLUDE})
 ## Depencencies
 
 # GLIB
