Update erizo cmakelists to enable -Werror
Replicate Ubuntu behavior where Erizo is built with -Wall -Werror
by default, not sure if it is inherited from another project or by
differences between Ubuntu 14.04 CMake (2.8.x) and OSX Brew (3.x.x)

--- a/erizo/src/CMakeLists.txt
+++ b/erizo/src/CMakeLists.txt
@@ -86,7 +86,7 @@ test_lib(${SSL})
 find_library(CRYPTO crypto HINTS "${THIRD_PARTY_LIB}")
 test_lib(${CRYPTO})
 
-# Libav
+# FFMPEG
 find_library(AVUTIL avutil HINTS "${THIRD_PARTY_LIB}")
 test_lib(${AVUTIL})
 set (LIBS ${AVUTIL})
@@ -108,6 +108,9 @@ include("${CMAKE_CURRENT_SOURCE_DIR}/third_party/webrtc.cmake")
 include("${CMAKE_CURRENT_SOURCE_DIR}/third_party/nicer.cmake")
 
 ## Erizo
+if(APPLE)
+add_definitions(-Wall -Werror)
+endif()
 add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/erizo")
 
 ## Examples
