Refactor encoding/decoding pipeline.
* Add sample format and channels to MediaInfo struct.
* Move MediaInfo, RTPInfo, ProcessorType structs into a single file.
* Abstract audio/video enc/dec from Input/OutputProcessor.
* Abstract basic enc/dec FFmpeg API into Coder class.
* Rename variables to follow cpp code guideline.

--- a/erizo_controller/erizoAgent/log4cxx.properties
+++ b/erizo_controller/erizoAgent/log4cxx.properties
@@ -34,7 +34,7 @@ log4j.logger.media.InputProcessor=WARN
 log4j.logger.media.OneToManyTranscoder=WARN
 log4j.logger.media.OutputProcessor=WARN
 
-
+log4j.logger.media.codecs.Coder=WARN
 log4j.logger.media.codecs.VideoEncoder=WARN
 log4j.logger.media.codecs.VideoDecoder=WARN
 log4j.logger.media.codecs.AudioEncoder=WARN
