--- a/erizo_controller/erizoAgent/log4cxx.properties
+++ b/erizo_controller/erizoAgent/log4cxx.properties
@@ -28,13 +28,15 @@ log4j.logger.dtls.DtlsFactory=WARN
 log4j.logger.dtls.DtlsSocketContext=WARN
 log4j.logger.dtls.SSL=WARN
 
-log4j.logger.media.ExternalInput=WARN
-log4j.logger.media.ExternalOutput=WARN
+log4j.logger.media.ExternalInput=DEBUG
+log4j.logger.media.ExternalOutput=DEBUG
 log4j.logger.media.InputProcessor=WARN
 log4j.logger.media.OneToManyTranscoder=WARN
 log4j.logger.media.OutputProcessor=WARN
 
+
 log4j.logger.media.codecs.Coder=WARN
+log4j.logger.media.codecs.CoderCodec=WARN
 log4j.logger.media.codecs.VideoEncoder=WARN
 log4j.logger.media.codecs.VideoDecoder=WARN
 log4j.logger.media.codecs.AudioEncoder=WARN
@@ -70,3 +72,4 @@ log4j.logger.rtp.LayerDetectorHandler=WARN
 log4j.logger.rtp.PliPacerHandler=WARN
 log4j.logger.rtp.RtpPaddingGeneratorHandler=WARN
 log4j.logger.rtp.PacketCodecParser=WARN
+
