--- a/erizo/src/erizo/CMakeLists.txt
+++ b/erizo/src/erizo/CMakeLists.txt
@@ -6,10 +6,10 @@ set(ERIZO_VERSION_MAJOR 0)
 set(ERIZO_VERSION_MINOR 1)
 if(${ERIZO_BUILD_TYPE} STREQUAL "debug")
   message("Generating DEBUG project")
-  set(CMAKE_CXX_FLAGS "-g -Wall -std=c++11 ${ERIZO_CMAKE_CXX_FLAGS}")
+  set(CMAKE_CXX_FLAGS "-g -Werror -Wall -std=c++11 ${ERIZO_CMAKE_CXX_FLAGS}")
 else()
   message("Generating RELEASE project")
-  set(CMAKE_CXX_FLAGS "-g -Wall -O3 -std=c++11 ${ERIZO_CMAKE_CXX_FLAGS}")
+  set(CMAKE_CXX_FLAGS "-g -Werror -Wall -O3 -std=c++11 ${ERIZO_CMAKE_CXX_FLAGS}")
 endif()
 
 
