--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,6 +49,13 @@ jobs:
       - deploy:
           name: Push Licode Docker image
           command: |
+            git log --pretty=oneline --abbrev-commit --no-merges -1 | awk '{$1=""; print $0}' | grep "[GENERATE DOCKER]"
+            FORCE_DOCKER_GENERATION=$?
+            if [ "$FORCE_DOCKER_GENERATION" == "1" ] && [ "${CIRCLE_PROJECT_USERNAME}" == "lynckia" ]; then
+              docker login -u ${DOCKER_USER} -p ${DOCKER_PASS}
+              echo Pushing to lynckia/licode:experimental
+              docker tag lynckia/licode:develop lynckia/licode:experimental
+              docker push lynckia/licode:experimental
             if [ "${CIRCLE_BRANCH}" == "master" ] && [ "${CIRCLE_PROJECT_USERNAME}" == "lynckia" ]; then
               SHORT_GIT_HASH="$(echo ${CIRCLE_SHA1} | cut -c -7)"
               docker login -u ${DOCKER_USER} -p ${DOCKER_PASS}
