--- a/erizo_controller/erizoAgent/log4cxx.properties
+++ b/erizo_controller/erizoAgent/log4cxx.properties
@@ -71,3 +71,4 @@ log4j.logger.rtp.LayerDetectorHandler=WARN
 log4j.logger.rtp.PliPacerHandler=WARN
 log4j.logger.rtp.RtpPaddingGeneratorHandler=WARN
 log4j.logger.rtp.PacketCodecParser=WARN
+log4j.logger.rtp.RtxPacketTranslator=WARN
